# todo-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.gitea/workflows/: rust.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  task.rs  todo.rs
tests/: task.rs  todo.rs
