[package]
name = "todo"
authors = ["mingcheng <mingcheng@apache.org"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple todo list application"
repository = "https://github.com/mingcheng/todo-rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.1"

[[bin]]
name = "todo"
path = "src/main.rs"
