#!#
# Copyright (c) 2025 Hangzhou Guanwaii Technology Co,.Ltd.
#
# This source code is licensed under the MIT License,
# which is located in the LICENSE file in the source tree's root directory.
#
# File: Cargo.toml
# Author: mingcheng (mingcheng@apache.org)
# File Created: 2025-02-20 11:03:14
#
# Modified By: mingcheng (mingcheng@apache.org)
# Last Modified: 2025-02-23 22:56:44
##

[package]
name = "todo"
authors = ["mingcheng <mingcheng@apache.org"]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A simple todo list application"
repository = "https://github.com/mingcheng/todo-rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.1"
build-time = "0.1.3"
anyhow = "1.0"
dialoguer = "0.10"

[[bin]]
name = "todo"
path = "src/main.rs"
